fixed spacing on the home-page

--- a/src/pages/HomePage/components/MainPageSection/MainPageSection.scss
+++ b/src/pages/HomePage/components/MainPageSection/MainPageSection.scss
@@ -1,5 +1,5 @@
 .main-page-section {
-  margin-bottom: $spacing-8;
+  margin-bottom: $spacing-16;
   &-title {
     font-size: $font-size-2xl;
     font-weight: $font-weight-bold;
